--- a/TriforceApp/res/layout/main.xml
+++ b/TriforceApp/res/layout/main.xml
@@ -11,7 +11,8 @@
         android:layout_height="220dp"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
-        android:src="@android:drawable/ic_menu_month" />
+        android:src="@android:drawable/ic_menu_month" 
+        android:contentDescription="@string/triforceapp_logo"/>
 
     <!--  The Username tag above the Text enter field to signify where the user should enter there username -->
     <TextView
