git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@117 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/main.xml
+++ b/TriforceApp/res/layout/main.xml
@@ -67,7 +67,8 @@
     <!--  Login button -->
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/loginButton"
+        android:onClick="loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -76,7 +77,8 @@
     <!--  Register Button -->
 
     <Button
-        android:id="@+id/register"
+        android:id="@+id/registerButton"
+        android:onClick="registerButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/register" />
