git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@122 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/main.xml
+++ b/TriforceApp/res/layout/main.xml
@@ -61,8 +61,7 @@
         android:id="@+id/passwordField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        />
+        android:inputType="textPassword" />
 
     <!--  Login button -->
 
