--- a/TriforceApp/res/layout/main.xml
+++ b/TriforceApp/res/layout/main.xml
@@ -16,11 +16,12 @@
 
     <!-- The Username tag above the Text enter field to signify where the user should enter there username -->
 
-    <ImageButton
-        android:id="@+id/imageButton1"
-        android:layout_width="199dp"
-        android:layout_height="225dp"
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="193dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_weight="0.49"
         android:src="@drawable/tforce_app_logo" />
 
     <TextView
