changed up some Ids on main.xml and register.xml to be more unique for when we have to reference them in our java classes. I've tried to prepare TriforceMain into working with our db and RegisterActivity is undergoing major changes to actually register a new user into our DB and SQLiteDB is still being worked on to be fully functional and useful
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@138 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/main.xml
+++ b/TriforceApp/res/layout/main.xml
@@ -7,7 +7,7 @@
     <!-- Image at the top of the app which we plan to change to our created logo later -->
 
     <TextView
-        android:id="@+id/login"
+        android:id="@+id/titleLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -17,7 +17,7 @@
     <!-- The Username tag above the Text enter field to signify where the user should enter there username -->
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/tforceLogo"
         android:layout_width="193dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -77,7 +77,7 @@
     <!-- Register Button -->
 
     <Button
-        android:id="@+id/registerButton"
+        android:id="@+id/GotoRegisterButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
