--- a/TriforceApp/res/layout/main.xml
+++ b/TriforceApp/res/layout/main.xml
@@ -76,12 +76,24 @@
 
     <!-- Register Button -->
 
-    <Button
-        android:id="@+id/GotoRegisterButton"
+    <TableRow
+        android:id="@+id/tableRow1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:onClick="registerButton"
-        android:text="@string/register" />
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/viewdbButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View DB" />
+
+        <Button
+            android:id="@+id/GotoRegisterButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="registerButton"
+            android:text="@string/register" />
+
+    </TableRow>
 
 </LinearLayout>
