--- a/TriforceApp/res/layout/view_db.xml
+++ b/TriforceApp/res/layout/view_db.xml
@@ -34,6 +34,12 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:text="Names" />
+            
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:text="Emails" />
         </TableRow>
     </TableLayout>
     <TextView
