git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@143 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/view_db.xml
+++ b/TriforceApp/res/layout/view_db.xml
@@ -15,37 +15,14 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="IDs" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="Usernames" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="Passwords" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="Names" />
-            
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="Emails" />
+                android:text="IDs / Usernames / Passwords / Names / Emails" />
         </TableRow>
     </TableLayout>
+
     <TextView
-        		android:id="@+id/tvSQLinfo"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:text="get info from db" />
+        android:id="@+id/tvSQLinfo"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:text="get info from db" />
 
 </LinearLayout>
