git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@147 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/main.xml
+++ b/TriforceApp/res/layout/main.xml
@@ -79,20 +79,23 @@
     <TableRow
         android:id="@+id/tableRow1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/register" >
 
-        <Button
-            android:id="@+id/viewdbButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="View DB" />
+    <Button
+        android:id="@+id/viewdbButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View DB" />
 
-        <Button
-            android:id="@+id/GotoRegisterButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="registerButton"
-            android:text="@string/register" />
+    <Button
+        android:id="@+id/GotoRegisterButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="registerButton"
+        android:text="@string/register" />
+
 
     </TableRow>
 
