--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_x="96dp"
-        android:layout_y="4dp"
-        android:text="@string/MAINPAGE"
+        android:layout_gravity="center"
+        android:text="@string/main"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-</AbsoluteLayout>
+</LinearLayout>
