remove cancel button on registration page
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@160 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/register.xml
+++ b/TriforceApp/res/layout/register.xml
@@ -75,24 +75,12 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress" />
 
-    <!-- Register button to create new account and cancel button -->
+    <!-- Register button to create new account -->
 
-    <TableRow
-        android:id="@+id/tableRow1"
+    <Button
+        android:id="@+id/registerUserButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <Button
-            android:id="@+id/cancelRegButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cancel" />
-
-        <Button
-            android:id="@+id/registerUserButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/register" />
-    </TableRow>
+        android:layout_height="wrap_content"
+        android:text="@string/register" />
 
 </LinearLayout>
