updated database and changed up some method headers. user_id is removed. username is p-key. task uses p-key as foreign key and has its own task_id as a primary.
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@173 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/view_db.xml
+++ b/TriforceApp/res/layout/view_db.xml
@@ -19,7 +19,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="IDs / Usernames / Passwords / Names / Emails" />
+                android:text="Usernames / Passwords / Names / Emails" />
         </TableRow>
     </TableLayout>
 
