updated main and tasklist
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@174 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content" >
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/newTaskButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -39,7 +39,7 @@
     </FrameLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/logoutButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/logoutMain" />
