--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TriforceApp.edu.gatech.cs2340.triforce.chekableList xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
-
+    
     <TextView
         android:id="@+id/titleTaskList"
         android:layout_width="wrap_content"
@@ -18,12 +18,20 @@
         android:layout_height="wrap_content"
         android:prompt="@string/task_types_prompt" />
 
-    <ListView
+  <!--   <ListView
         android:id="@+id/listView1"
         android:layout_width="wrap_content"
         android:layout_height="328dp" >
     </ListView>
-
+-->
+	<CheckedTextView 
+	    	android:id="@+id/checkableList" 
+	    	android:layout_width="fill_parent"
+	    	android:layout_height="wrap_content"
+	    	android:gravity="center_vertical"
+				android:ellipsize="marquee"
+			android:singleLine="true"
+	 />
     <FrameLayout
         android:id="@+id/frameLayout1"
         android:layout_width="match_parent"
@@ -43,5 +51,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/logoutMain" />
-
-</LinearLayout>
+</TriforceApp.edu.gatech.cs2340.triforce.chekableList>
