--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:prompt="@string/task_types_prompt" />
 
-  	<TriforceApp.edu.gatech.cs2340.triforce.chekableList xmlns:android="http://schemas.android.com/apk/res/android"
+  	<edu.gatech.cs2340.triforce.chekableList xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:orientation="vertical">
@@ -41,7 +41,7 @@
 		    	android:singleLine="true"
 		
 		/>
-    </TriforceApp.edu.gatech.cs2340.triforce.chekableList>
+    </edu.gatech.cs2340.triforce.chekableList>
     <FrameLayout
         android:id="@+id/frameLayout1"
         android:layout_width="match_parent"
